[v1] Responsive issue - align input and button

--- a/less/layout.less
+++ b/less/layout.less
@@ -134,4 +134,8 @@ h1 {
   .content {
     padding: 1em 1em 0;
   }
+  .pure-form input[type=email], .pure-form button[type=submit] {
+    display: inline-block;
+    margin: 0;
+  }
 }
